2001-09-02  Steve Youngs  <youngs@xemacs.org>

	* eicq-report.el: Require 'message. 

	* eicq.el (eicq-face-online): Remove background colour to make it
	look better for light backgrounds.
	(eicq-face-away): Ditto.
	(eicq-face-occ): Ditto.
	(eicq-face-dnd): Ditto.
	(eicq-face-ffc): Ditto.
	(eicq-face-na): Ditto.
	(eicq-face-offline): Ditto.
	(eicq-face-log-unread): Ditto.
	(eicq-face-log-read): Ditto.
	(eicq-auto-response-messages-p): New.
	(eicq-do-message-helper): Use 'eicq-auto-response-messages-p'.

	* eicq-wharf.el (eicq-wharf-default-face): Remove background
	colour to make it look better for light backgrounds.

2001-08-18  Steve Youngs  <youngs@xemacs.org>

	* README: Minor updates.

	* Makefile (SOURCES): Add eicq-wharf.el.

	* eicq.el (eicq-show-window): Fire up the EicqWharf frame.
	(eicq-disconnect): Kill the EicqWharf frame if present.

	* eicq-wharf.el (eicq-wharf-frame-use-p): New.

2001-08-18  Erik Arneson  <erik@aarg.net>

	* eicq-wharf.el: New file.

2001-08-17  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-buddy-show-buffer): Remove the text "*** Bottom ***".
	(eicq-sound-directory): Use 'locate-data-directory'.
	(eicq-read-message-hook): New.
	(eicq-system-message-hook): New.
	(eicq-do-message-hook): Rename to 'eicq-new-message-hook'.
	(eicq-do-status-update-hook): Rename to 'eicq-status-update-hook'.
	(eicq-do-system-message): Use 'eicq-system-message-hook'.
	(eicq-log-mark-read): Use 'eicq-read-message-hook' if called
	interactively. 
	(eicq-idle-reply-away): New.
	(eicq-idle-reply-na): New.
	(eicq-status-idle-reply): New.
	(eicq-idle-reply): New.
	(eicq-do-message-helper): Use 'eicq-idle-reply'.
	(eicq-do-info-ext): Hopefully, nicer layout for query results.
	(eicq-do-info): Ditto.

	* eicq-toolbar.el (eicq-icon-directory): Use
	'locate-data-directory. 

	* eicq-report.el: Require shadow and font-lock.
	(eicq-report-bug-send-init): New.
	(eicq-report-debug): Include checking eicq-report.el for changed
	variables.